<resources>
    <string name="China">Simplified Chinese</string>
    <string name="English">English</string>
    <string name="Korean">Korean</string>
    <string name="German">German</string>
    <string name="French">French</string>
    <string name="TraditionalChinese">Traditional Chinese</string>
    <string name="Italian">Italian</string>
    <string name="Spanish">Spanish</string>
    <string name="app_name">BTX</string>
    <string name="cancle">Cancel</string>
    <string name="confirm">OK</string>
    <string name="back">Back</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="no_network">No Network</string>
    <string name="parse_error">Parse Error</string>
    <string name="login_invalid">Login invalid！</string>
    <string name="no_data">No data</string>
    <string name="submit">Submit</string>
    <string name="exit_again">Click to exit</string>
    <string name="name">User Name</string>
    <string name="new_pwd">New PWD</string>
    <string name="new_pwd_shuru_signup">Please input password</string>
    <string name="new_pwd2_shuru">Please input password again</string>
    <string name="photograph">Take Pictures</string>
    <string name="success">Success</string>
    <string name="save">Save</string>
    <string name="Start_downloading">Start downloading... Please wait for a while</string>
    <string name="more">More</string>
    <string name="index">Index</string>
    <string name="hide">Hide</string>
    <string name="main">Main</string>
    <string name="child">Sub</string>
    <string name="delete">Delete</string>
    <string name="camera_permission">Permission is not available, please turn on camera permission</string>
    <string name="storage_permission">Permission is not available. Please enable storage permissions</string>
    <string name="password_realname">Please set the FundPassword and real name authentication first</string>
    <string name="binding_phone_first">Please bind the phone number first</string>
    <string name="realname">Please go to the real-name authentication</string>
    <string name="shangjia">Please go to the merchant for certification</string>
    <string name="tishi">Please complete the information or reselect the picture</string>
    <string name="library_file_exception">The gallery file returns an exception</string>
    <string name="Incomplete_information">Incomplete information</string>
    <string name="xieyi">Unchecked agree user agreement</string>
    <string name="empty_address">Data error, empty address</string>
    <string name="order_details_failed">Order details failed to retrieve and is being retrieved</string>
    <string name="No_qrcode">Not set QR code address</string>
    <string name="No_ads">Failed to get the AD message, trying to get it again!</string>
    <string name="nationality">Country</string>
    <string name="china">China</string>
    <string name="start_bind">Start binding</string>
    <string name="egional_selection">District selection</string>
    <string name="change_phone_num">Modify the cell-phone number</string>
    <string name="changeBindPhoneNum">Modify the binding phone number</string>
    <string name="changeBindPhoneNumTip">You are modifying the binding phone number of the account. Please verify your identity</string>
    <string name="receivePhoneCode">The original phone can accept captcha</string>
    <string name="unReceivePhoneCode">The original phone can not accept captcha</string>
    <string name="unReceivePhoneCodeTip">The original mobile phone number can\'t receive captcha, please contact customer service modify binding</string>
    <string name="handsetTailNumber">Cell phone tail number</string>
    <string name="receiveMessageCode">Received SMS verification code</string>
    <string name="changeLoginPassword">Change login password</string>
    <string name="changeLoginPasswordTip1">You have already bound your mobile phone number</string>
    <string name="changeLoginPasswordTip2">Please log in again after successful modification</string>
    <string name="oldLoginPassword">Old login password</string>
    <string name="newLoginPassword">New login password</string>
    <string name="certainPassword">Confirm password</string>
    <string name="setMoneyPassword">Set the FundPassword</string>
    <string name="setMoneyPasswordTip">You are changing the FundPassword</string>
    <string name="changeMoneyPassword">Change the FundPassword</string>
    <string name="oldMoneyPassword">Old FundPassword</string>
    <string name="newMoneyPassword">New FundPassword</string>
    <string name="certainMoneyPassword">Confirm FundPassword</string>
    <string name="IdCardNumber">ID Card NO.</string>
    <string name="Upload_success">Uploaded successfully</string>
    <string name="home">Home</string>
    <string name="market">Market</string>
    <string name="transaction">Trade</string>
    <string name="fabi2">CTC</string>
    <string name="account">My</string>
    <string name="four_danjia">Price</string>
    <string name="dz_time">Arrived Date</string>
    <string name="star_time">Start Date</string>
    <string name="end_time">End Date</string>
    <string name="jiaoyi_dui">Transaction Pair</string>
    <string name="jiaoyi_fangxiang">Direction</string>
    <string name="jiaoyi_weituoliang">Volume</string>
    <string name="jiaoyi_yichengjiao">Done</string>
    <string name="jiaoyi_shouxufei">Fee</string>
    <string name="login_view">Log in to View</string>
    <string name="login_assets">Total assets (USDT)</string>
    <string name="not_logged_in">Not Login</string>
    <string name="welcome_to">Welcome to BTX</string>
    <string name="my_order">Orders</string>
    <string name="my_ads">Adertisers</string>
    <string name="my_message">Platform Message</string>
    <string name="my_entrust">MyEntrust</string>
    <string name="history_trust">Historical</string>
    <string name="my_credit">ID Authentication</string>
    <string name="my_version">Version</string>
    <string name="my_language">Language</string>
    <string name="has_new_version">New Version</string>
    <string name="my_setting">Setting</string>
    <string name="balance">Total Assets（USDT）</string>
    <string name="balance_1">Assets</string>
    <string name="balance_2">My Assets</string>
    <string name="balance_3">Transaction</string>
    <string name="my_fabi">OTC Management</string>
    <string name="logout_confirm">Are you sure  to log out？</string>
    <string name="logout_current_account">Log out</string>
    <string name="ctc_title">CTC Trade</string>
    <string name="ctc_buy_amount_tips">Please enter the purchase quantity</string>
    <string name="ctc_amount_tips">Please enter a number between 50 and 50,000</string>
    <string name="ctc_sell_amount_tips">Please enter the quantity sold</string>
    <string name="message_details">Announcement</string>
    <string name="remark">Remark(Memo)</string>
    <string name="order_appeal">Complaint</string>
    <string name="appealTip">We will deal with your appeal as soon as possible. Please be patient</string>
    <string name="appealTip2">Please briefly describe the reasons for your appeal (within 300 words)</string>
    <string name="chat">Chatting</string>
    <string name="send_chat">Send</string>
    <string name="recently">just</string>
    <string name="item_buy">Buy</string>
    <string name="item_sell">Sell</string>
    <string name="lishi">History</string>
    <string name="current_trust">Current Delegate</string>
    <string name="undone">Cancelled</string>
    <string name="traded_trade">Done</string>
    <string name="trading">Trading</string>
    <string name="trust_detail">Transaction details</string>
    <string name="item_time">Time</string>
    <string name="item_cost">Trade price</string>
    <string name="item_number">Entrust amount</string>
    <string name="item_charge">Fee</string>
    <string name="all">All</string>
    <string name="text_buy">Buy</string>
    <string name="text_buy_one">Buy</string>
    <string name="text_sale">Sell</string>
    <string name="text_price">Price</string>
    <string name="text_number">Amount</string>
    <string name="text_number2">Amount:</string>
    <string name="text_entrust">Entrust Amount</string>
    <string name="text_xian_login">Please log in first</string>
    <string name="text_login_disabled">Login information is invalid, please login again!</string>
    <string name="text_pan">Plate</string>
    <string name="login_entity">Please log in or register first</string>
    <string name="text_entity">No Data</string>
    <string name="text_enter_price">Please enter the price</string>
    <string name="text_best_price">Buy at the best price</string>
    <string name="text_best_sale">Sell at the best price</string>
    <string name="text_best_prices">The best price</string>
    <string name="text_used">Avail</string>
    <string name="text_sell_one">For Sell</string>
    <string name="text_sell_two">Sell</string>
    <string name="text_volume">Trade Amount</string>
    <string name="text_average_price">Trade Price</string>
    <string name="text_entrust_num">Entrust Amount</string>
    <string name="text_total_deal">Vol</string>
    <string name="text_total_entrust">Total Amount</string>
    <string name="text_turnover">Turnover</string>
    <string name="text_24_change">24H \t</string>
    <string name="text_actual_deal">Done</string>
    <string name="marketPrice">Market Price</string>
    <string-array name="text_type">
        <item>Limited Price</item>
        <item>Market Price</item>
    </string-array>
    <string-array name="text_type_array">
        <item>Deselect</item>
        <item>Price Limit Delegate</item>
        <item>Market Price Delegate</item>
    </string-array>
    <string-array name="text_type_param">
        <item>Deselect</item>
        <item>LIMIT_PRICE</item>
        <item>MARKET_PRICE</item>
    </string-array>
    <string-array name="text_direction">
        <item>Deselect</item>
        <item>Buy</item>
        <item>Sell</item>
    </string-array>
    <string name="bhb_deduct">Use BHB to offset the handling charge</string>
    <string name="dialog_cancel">Use</string>
    <string name="dialog_confirm">Don\'t use</string>
    <string name="text_repeal">Undo</string>
    <string name="text_wei_price">Price</string>
    <string name="dialog_one_title">Undo Comfirm</string>
    <string name="dialog_one_one">Are you suer to Undo your delegation?</string>
    <string name="dialog_one_two">Undo</string>
    <string name="text_ad_select">please choose</string>
    <string name="mentionMoney">Withdraw</string>
    <string name="chargeMoney">Deposit</string>
    <string name="matchMoney">Match</string>
    <string name="binding_phone">Bind phone number</string>
    <string name="login_password">Login password</string>
    <string name="capital_password">Fund Pwd</string>
    <string name="capital_passwordTip">Please enter fund password</string>
    <string name="unionpay_account">Bank account</string>
    <string name="unionpay_accountTip">Please enter your bank card number</string>
    <string name="unionpay_accountTip2">Please enter your bank card number again</string>
    <string name="bank_card_binding">Bank card binding</string>
    <string name="bank">Bank of deposit</string>
    <string name="account_opening_branch">Branch bank of deposit</string>
    <string name="account_opening_branchTip">Please input ranch bank of deposit</string>
    <string name="confirm_cardnumber">Confirm the card number</string>
    <string name="phone_number">Phone numbe</string>
    <string name="send_code">Send Verification</string>
    <string name="phone_code">verification code</string>
    <string name="code">Verification code</string>
    <string name="text_limit_entrust">Limit Price</string>
    <string name="text_Market_entrust">Market Price</string>
    <string name="text_plan_entrust">Stop Order</string>
</resources>