<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackDark"
    android:orientation="vertical"
    tools:context="com.bizzan.ui.bind_phone.BindPhoneActivity">

    <!--标题-->
    <LinearLayout
        android:id="@+id/llTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/primaryBackNormal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:scaleType="center"
            android:src="@drawable/icon_back_gray"
            android:visibility="visible"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/binding_phone"
            android:textColor="@color/primaryText"
            android:textSize="18sp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/ibRegist"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:minWidth="48dp"
            android:textColor="@color/primaryText"
            android:textSize="14sp"
            android:visibility="invisible"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/primaryBackNormal"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/nationality"
            android:textColor="@color/primaryText"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawablePadding="6dp"
            android:drawableRight="@mipmap/icon_arrow_black"
            android:gravity="center|left"
            android:minHeight="32dp"
            android:paddingRight="8dp"
            android:layout_marginLeft="15dp"
            android:text="@string/china"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primaryBackNormal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/tvAreaCode"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="+86"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/primaryTextGray"
            android:layout_marginLeft="15dp"
            android:minHeight="24dp"
            android:textSize="15sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primaryBackNormal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/phone_code"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/etCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/code"
            android:inputType="number"
            android:minHeight="24dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/primaryTextGray"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tvSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/selector_send_bind_phone_code"
            android:paddingBottom="3dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="3dp"
            android:text="@string/send_code"
            android:textColor="@drawable/selector_send_bind_phone_color"
            android:textSize="14sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primaryBackNormal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/login_password"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:minHeight="24dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/primaryTextGray"
            android:textSize="15sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tvBind"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/yellowDark"
        android:gravity="center"
        android:text="@string/start_bind"
        android:textColor="#fff"
        android:textSize="18sp"/>


</LinearLayout>
