<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:background="@color/primaryBackNormal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_limit_entrust"
        android:layout_width="match_parent"
        android:layout_height="30dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/text_limit_entrust"
            android:textColor="@color/primaryTextGray"
            android:textSize="14sp"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primaryBackDark"/>
    <LinearLayout
        android:id="@+id/ll_Market_entrust"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/text_Market_entrust"
            android:textColor="@color/primaryTextGray"
            android:textSize="14sp"
            android:layout_centerVertical="true"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primaryBackDark"/>
    <LinearLayout
        android:id="@+id/ll_plan_entrust"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/text_plan_entrust"
            android:textColor="@color/primaryTextGray"
            android:textSize="14sp"
            android:layout_centerVertical="true"/>

    </LinearLayout>

</LinearLayout>